# gifLib

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/xingzy/: GifHandler.java  MainActivity.java
app/src/main/jni/: native-lib.c
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
